--- a/MVCCoreDemo/Areas/MasterSettings/Views/Shared/_Trainer.cshtml
+++ b/MVCCoreDemo/Areas/MasterSettings/Views/Shared/_Trainer.cshtml
@@ -45,6 +45,7 @@
                 <thead>
                     <tr class="align-middle">
                         <th style="width:50px">Action</th>
+                        <th>Photo</th>
                         <th>Trainer Id</th>
                         <th>First Name</th>
                         <th>Last No</th>
