--- a/MVCCoreDemo/Areas/MasterSettings/Views/Shared/_Batch.cshtml
+++ b/MVCCoreDemo/Areas/MasterSettings/Views/Shared/_Batch.cshtml
@@ -31,6 +31,9 @@
             right: 0px;
             width: 20px;
         }
+
+   
+
 </style>
 <div class="container mt-4">
     <div class="card">
@@ -46,8 +49,8 @@
                         <th>Batch Id</th>
                         <th>Name</th>
                         <th>Description</th>
-                        <th>From Date</th>
-                        <th>To Date</th>
+                        @*<th>From Date</th>
+                        <th>To Date</th>*@
                         <th>Amount</th>
                         <th>Tax</th>
                         <th>GST Amount</th>
@@ -61,78 +64,78 @@
         </div>
     </div>
     <!-- /.modal -->
+            <div class="modal fade" id="MemberRegitrationModel">
+                <div class="modal-dialog modal-lg">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            @*<h4 class="modal-title">Plan Registration</h4>*@
+                            <h4 class="modal-title"><i class="fa fa-pen"></i> Plan Registration</h4>
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                        </div>
+                        <div class="modal-body">
+                            <div class="form-group">
+                                <label for="Name">Name</label>
+                                <input type="text" class="form-control" id="name" name="name">
+                            </div>
+                            <div class="form-group">
+                                <label for="Description">Description</label>
+                                <textarea class="form-control" id="description" name="description" rows="3"></textarea>
+                            </div>
+                            @*<div class="form-row">
+                                <div class="form-group col-md-6">
+                                    <label for="FromDate">From Date</label>
+                                    <input type="text" class="form-control" id="FromDate" name="FromDate">
+                                </div>
+                                <div class="form-group col-md-6">
+                                    <label for="ToDate">To Date</label>
+                                    <input type="text" class="form-control" id="ToDate" name="ToDate">
+                                </div>
+                            </div>*@
+                            <div class="form-row">
+                                <div class="form-group col-md-6">
+                                    <label for="FromDate">No fo Days</label>
+                                    <input type="number" class="form-control" id="NoOfDays" name="NoOfDays">
+                                </div>
+                                <div class="form-group col-md-6">
 
-    <div class="modal fade" id="MemberRegitrationModel">
-        <div class="modal-dialog modal-lg">
-            <div class="modal-content">
-                <div class="modal-header">
-                    @*<h4 class="modal-title">Plan Registration</h4>*@
-                    <h4 class="modal-title"><i class="fa fa-pen"></i> Plan Registration</h4>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
-                </div>
-                <div class="modal-body">
-                    <div class="form-group">
-                        <label for="Name">Name</label>
-                        <input type="text" class="form-control" id="name" name="name">
-                    </div>
-                    <div class="form-group">
-                        <label for="Description">Description</label>
-                        <textarea class="form-control" id="description" name="description" rows="3"></textarea>
-                    </div>
-                    <div class="form-row">
-                        <div class="form-group col-md-6">
-                            <label for="FromDate">From Date</label>
-                            <input type="text" class="form-control" id="FromDate" name="FromDate">
-                        </div>
-                        <div class="form-group col-md-6">
-                            <label for="ToDate">To Date</label>
-                            <input type="text" class="form-control" id="ToDate" name="ToDate">
-                        </div>
-                    </div>
-                    <div class="form-row">
-                        <div class="form-group col-md-6">
-                            <label for="FromDate">No fo Days</label>
-                            <input type="number" class="form-control" id="NoOfDays" name="NoOfDays">
-                        </div>
-                        <div class="form-group col-md-6">
-                           
-                        </div>
-                    </div>
-                    <div class="form-row">
-                        <div class="form-group col-md-6">
-                            <label for="Amount">Amount</label>
-                            <input type="text" class="form-control" id="Amount" onchange="CalculateFees();" maxlength="50">
-                        </div>
-                        <div class="form-group col-md-6">
-                            <label for="GSTAmount">GST Amount</label>
-                            <input type="text" class="form-control" id="GSTAmount" maxlength="50" disabled>
-                        </div>
-                    </div>
-                    <div class="form-row">
-                        <div class="form-group col-md-6">
-                            <label for="TaxType">Tax</label>
-                            <select class="form-control select2" id="TaxType" name="TaxType" onchange="CalculateFees();"></select>
-                        </div>
+                                </div>
+                            </div>
+                            <div class="form-row">
+                                <div class="form-group col-md-6">
+                                    <label for="Amount">Amount</label>
+                                    <input type="text" class="form-control" id="Amount" onchange="CalculateFees();" maxlength="50">
+                                </div>
+                                <div class="form-group col-md-6">
+                                    <label for="GSTAmount">GST Amount</label>
+                                    <input type="text" class="form-control" id="GSTAmount" maxlength="50" disabled>
+                                </div>
+                            </div>
+                            <div class="form-row">
+                                <div class="form-group col-md-6">
+                                    <label for="TaxType">Tax</label>
+                                    <select class="form-control select2" id="TaxType" name="TaxType" onchange="CalculateFees();"></select>
+                                </div>
 
-                        <div class="form-group col-md-6">
-                            <label for="TotalAmount">Total Amount</label>
-                            <input type="text" class="form-control" id="TotalAmount" disabled>
+                                <div class="form-group col-md-6">
+                                    <label for="TotalAmount">Total Amount</label>
+                                    <input type="text" class="form-control" id="TotalAmount" disabled>
+                                </div>
+                            </div>
+                            <button type="button" class="btn btn-primary" onclick="AddBatch();">Add Plan</button>
                         </div>
                     </div>
-                    <button type="button" class="btn btn-primary" onclick="AddBatch();">Add Plan</button>
-                </div>
-                </div>
-            @*<div class="modal-footer justify-content-between">
+                    @*<div class="modal-footer justify-content-between">
                     <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
                     <button type="button" class="btn btn-primary" onclick="AddBatch();">Save changes</button>
                 </div>*@
-            @*</div>*@
-            <!-- /.modal-content -->
-        </div>
-        <!-- /.modal-dialog -->
-    </div>
+                    @*</div>*@
+                    <!-- /.modal-content -->
+                </div>
+                <!-- /.modal-dialog -->
+            </div>
+        
     <!-- /.modal -->
 </div>
 <script src="~/dist/plugins/jquery/jquery.min.js"></script>
@@ -178,8 +181,11 @@
                 this.value = this.value.slice(0, 11);
             }
         });
+        
     });
-
+    $(document).ajaxSend(function () {
+        $("#overlay").fadeIn(300);
+    });
 </script>
 
 <script src="~/dist/plugins/moment/moment.min.js"></script>
