Amar added user welcome code in _layout page

--- a/MVCCoreDemo/Areas/Dashboard/Views/Dashboard/Index.cshtml
+++ b/MVCCoreDemo/Areas/Dashboard/Views/Dashboard/Index.cshtml
@@ -145,7 +145,8 @@
                 <div class="card">
                     <div class="card-body">
                         <h4 class="card-title" style="margin: 0px;">Monthly Admissions<span id="Donutlegend"></span></h4>
-                        <div id="bar-chart"></div>
+                        <div id="bar-chart" height="170"></div>
+                        @*<canvas id="bar-chart" height="170"></canvas>*@
                     </div>
                 </div>
             </div>
