--- a/MVCCoreDemo/Areas/PaymentDetails/Views/Payment/Index.cshtml
+++ b/MVCCoreDemo/Areas/PaymentDetails/Views/Payment/Index.cshtml
@@ -17,7 +17,7 @@
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-md-12">
-                        <h4>Master Settings</h4>
+                        <h4>Payment Management </h4>
                         <div class="card">
                             <div class="card-body">
                                 <div class="row">
@@ -25,7 +25,10 @@
                                         <div id="tabstrip" class="nav flex-column nav-tabs h-100" role="tablist" aria-orientation="vertical">
                                             @foreach (var submenu in UserMenus.Where(x => x.ParentMenuId == 2011).ToList())
                                             {
-                                                <a class="nav-link" data-toggle="tab" href="#@submenu.Mnu_Action" role="tab">@submenu.MenuName</a>
+                                            <a class="nav-link" data-toggle="tab" href="#@submenu.Mnu_Action" role="tab">
+                                                <i class="@submenu.IconCssName"></i>
+                                                <span class="hidden-xs-up text-dark">@submenu.MenuName</span>
+                                            </a>
                                             }
                                             @*<a class="nav-link" id="vert-tabs-home-tab" data-toggle="pill" href="#vert-tabs-home" role="tab" aria-controls="vert-tabs-home" aria-selected="true">Role Wise Menu</a>
                                                 <a class="nav-link" id="vert-tabs-profile-tab" data-toggle="pill" href="#vert-tabs-profile" role="tab" aria-controls="vert-tabs-profile" aria-selected="false">Role Menu Operation Access</a>*@
