--- a/MVCCoreDemo/Views/Shared/_Layout.cshtml
+++ b/MVCCoreDemo/Views/Shared/_Layout.cshtml
@@ -111,7 +111,7 @@
 
                         </ul>
                         <!-- SEARCH FORM -->
-                        <form class="form-inline ml-0 ml-md-3">
+                        @*<form class="form-inline ml-0 ml-md-3">
                             <div class="input-group input-group-sm">
                                 <input class="form-control form-control-navbar" type="search" placeholder="Search" aria-label="Search">
                                 <div class="input-group-append">
@@ -120,13 +120,14 @@
                                     </button>
                                 </div>
                             </div>
-                        </form>
+                        </form>*@
                     </div>
 
+                    
                     <!-- Right navbar links -->
                     <ul class="order-1 order-md-3 navbar-nav navbar-no-expand ml-auto">
                         <!-- Messages Dropdown Menu -->
-                        <li class="nav-item dropdown">
+                        @*<li class="nav-item dropdown">
                             <a class="nav-link" data-toggle="dropdown" href="#">
                                 <i class="fas fa-comments"></i>
                                 <span class="badge badge-danger navbar-badge">3</span>
@@ -182,7 +183,7 @@
                                 <div class="dropdown-divider"></div>
                                 <a href="#" class="dropdown-item dropdown-footer">See All Messages</a>
                             </div>
-                        </li>
+                        </li>*@
                         <!-- Notifications Dropdown Menu -->
                         <li class="nav-item dropdown">
                             <a class="nav-link" data-toggle="dropdown" href="#">
@@ -210,10 +211,17 @@
                                 <a href="#" class="dropdown-item dropdown-footer">See All Notifications</a>
                             </div>
                         </li>
-                        <li class="nav-item">
+                        @*<li class="nav-item">
                             <a class="nav-link" data-widget="control-sidebar" data-slide="true" href="#" role="button">
                                 <i class="fas fa-th-large"></i>
                             </a>
+                        </li>*@
+                        <li>
+                            @{
+                                string USER_NAME = HttpContextAccessor.HttpContext.Session.GetString("USER_NAME");
+                                USER_NAME = USER_NAME?.Trim('"');
+                                <span><b>Welcome :</b> @USER_NAME</span>
+                            }
                         </li>
                     </ul>
 
